[package]
name = "dco3_crypto"
version = "0.5.1"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3-crypto"
homepage = "https://github.com/unbekanntes-pferd/dco3-crypto"
license = "MIT"
readme = "README.md"
keywords = ["dracoon", "cryptography", "openssl"]
description = "Symmetric and asymmetric encryption for DRACOON in Rust."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["serde_derive"] }
openssl = { version = "0.10.56", features = ["vendored"] }