[package]
name = "dco3_crypto"
version = "0.7.0"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3-crypto"
homepage = "https://github.com/unbekanntes-pferd/dco3-crypto"
license = "MIT"
readme = "README.md"
keywords = ["dracoon", "cryptography", "openssl"]
description = "Symmetric and asymmetric encryption for DRACOON in Rust."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
serde_json = "1"
serde = { version = "1", features = ["serde_derive"] }
openssl = { version = "0.10.64", features = ["vendored"] }